feat: add path condition for triggering the workflow

--- a/.github/workflows/gcp-auth.yml
+++ b/.github/workflows/gcp-auth.yml
@@ -2,8 +2,9 @@ name: GCP Authentication Test
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - .github/**
+      - terraform/**
   workflow_dispatch:
 
 jobs:
